--- a/ansible.cfg
+++ b/ansible.cfg
@@ -843,7 +843,7 @@ private_key_file=~/.ssh/ansible
 ;control_path_dir=~/.ansible/cp
 
 # (boolean) Determines if SSH should check host keys.
-;host_key_checking=True
+host_key_checking=False
 
 # (boolean) Pipelining reduces the number of connection operations required to execute a module on the remote server, by executing many Ansible modules without actual file transfers.
 # This can result in a very significant performance improvement when enabled.
